Editable text component updated to maintain the pencil icon always at the end of the text div and aligned with the top line of the text to avoid flickering issues of icon appearing on the next line in case of long text inputs

--- a/app/react/components/sizung/components/EditableText/index.css
+++ b/app/react/components/sizung/components/EditableText/index.css
@@ -20,4 +20,17 @@
 .persisted-text-container {
   width: 100%;
   padding: 0px;
+  display: inline;
+}
+
+.persisted-text {
+  display: inline-block;
+  max-width: 80%;
+  float: left;
+}
+
+.edit-link-container {
+  display: inline-block;
+  float: left;
+  padding-left: 1em;
 }
